[package]
name = "boardgame_scheduler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = {version = "1.3.3", optional = true}

[features]
se = ["serde", "bincode"]

[profile.release]
debug-assertions = false
debug = false
lto = true

