[package]
name = "boardgame_scheduler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
bincode = {version = "1.3.3"}
sled = "0.34.7"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
#se = ["serde", "bincode"]

[profile.release]
debug-assertions = false
debug = true
lto = true

[profile.dev]
opt-level = 3
